# aiogram-template

./: .dockerignore  .env.example  .gitignore  Dockerfile.alembic  Dockerfile.dev  Dockerfile.lint  Dockerfile.prod  alembic.ini  compose.yaml  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  lint.yaml
alembic/: env.py
alembic/versions/: 271e6328fb9c_create_user_and_blocker_tables.py  6d7f4c733dea_create_user_and_blocker_tables.py  9c9c48fce1af_create_user_and_blocker_tables.py  a9d0b77dc337_create_user_and_blocker_tables.py  dd93f490a37b_create_user_and_blocker_tables.py
kubernetes/: bot.yaml  kubernetes.yaml  postgres.yaml  redis.yaml  secret.yaml.example
src/: create_bot.py  main.py  wait_for_db.py
src/bot/start/: lang.py  router.py
src/bot/user/: actions.py  middlewares.py  models.py
src/common/bot/: __init__.py
src/common/db/: __init__.py  base.py  sessionmaker.py
src/common/environment/: __init__.py
src/common/lang/: __init__.py
src/db/: sessionmaker.py
src/entities/: __init__.py  bot.py  constants.py  middlewares.py
src/models/: __init__.py  database.py  user.py
src/routers/: __init__.py  include_routers.py  index.py
src/server/: __init__.py
