[project]
name = "aiogram-template"
version = "0.1.0"
description = "Telegram bot template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.40",
]

[tool.ruff]
line-length = 80
exclude = ["alembic/versions"]

[tool.ruff.lint]
extend-select = ["I"]
